--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CAD Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>CAD Dashboard</h1>
+        <nav>
+            <a href="dispatch.html">Dispatch</a>
+            <a href="units.html">Units</a>
+            <a href="calls.html">Active Calls</a>
+            <a href="settings.html">Settings</a>
+        </nav>
+    </header>
+    <div class="container">
+        <div class="card">
+            <h2>Welcome to the CAD System</h2>
+            <p>Use the navigation above to access different sections of the CAD.</p>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2024 CAD System</p>
+    </footer>
+</body>
+</html>
