--- a/index.html
+++ b/index.html
@@ -7,23 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>CAD Dashboard</h1>
-        <nav>
-            <a href="dispatch.html">Dispatch</a>
-            <a href="units.html">Units</a>
-            <a href="calls.html">Active Calls</a>
-            <a href="settings.html">Settings</a>
-        </nav>
-    </header>
-    <div class="container">
-        <div class="card">
-            <h2>Welcome to the CAD System</h2>
-            <p>Use the navigation above to access different sections of the CAD.</p>
-        </div>
-    </div>
-    <footer>
-        <p>&copy; 2024 CAD System</p>
-    </footer>
+    <h1>Welcome to the CAD System</h1>
+    <p>Choose an option:</p>
+    <a href="units.html">Manage Units</a>
+    <a href="calls.html">Manage Calls</a>
+    <a href="logs.html">View Logs</a>
+    <a href="settings.html">Settings</a>
 </body>
+<script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-firestore.js"></script>
+<script src="firebase-config.js"></script>
+<script src="script.js"></script>
 </html>
