--- a/calls.html
+++ b/calls.html
@@ -3,35 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Active Calls</title>
+    <title>Manage Calls</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Active Calls</h1>
-        <nav>
-            <a href="index.html">Dashboard</a>
-            <a href="dispatch.html">Dispatch</a>
-            <a href="units.html">Units</a>
-            <a href="settings.html">Settings</a>
-        </nav>
-    </header>
-    <div class="container">
-        <div class="card">
-            <h2>Calls</h2>
-            <table class="table" id="calls-table">
-                <tr>
-                    <th>Call ID</th>
-                    <th>Description</th>
-                    <th>Status</th>
-                </tr>
-                <!-- Calls will be populated here from Firestore -->
-            </table>
-        </div>
-    </div>
-    <footer>
-        <p>&copy; 2024 CAD System</p>
-    </footer>
+    <h1>Calls Management</h1>
+    <div id="calls-list"></div>
+
+    <h2>Add New Call</h2>
+    <form id="add-call-form">
+        <input type="text" id="description" placeholder="Description" required>
+        <input type="text" id="location" placeholder="Location (Lat, Long)" required>
+        <button type="submit">Add Call</button>
+    </form>
+
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-firestore.js"></script>
     <script src="firebase-config.js"></script>
     <script src="script.js"></script>
 </body>
