--- a/settings.html
+++ b/settings.html
@@ -7,25 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Settings</h1>
-        <nav>
-            <a href="index.html">Dashboard</a>
-            <a href="dispatch.html">Dispatch</a>
-            <a href="units.html">Units</a>
-            <a href="calls.html">Active Calls</a>
-        </nav>
-    </header>
-    <div class="container">
-        <div class="card">
-            <h2>User Preferences</h2>
-            <label for="dark-mode">Dark Mode:</label>
-            <input type="checkbox" id="dark-mode" checked>
-        </div>
-    </div>
-    <footer>
-        <p>&copy; 2024 CAD System</p>
-    </footer>
+    <h1>User Settings</h1>
+    <form id="update-profile-form">
+        <input type="text" id="username" placeholder="Username" required>
+        <input type="text" id="bio" placeholder="Bio">
+        <button type="submit">Update Profile</button>
+    </form>
+
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-firestore.js"></script>
     <script src="firebase-config.js"></script>
     <script src="script.js"></script>
 </body>
